# twitter-brands

./: pyproject.toml
data/: data_lemonapp.csv  data_mercadopago.csv  data_mp_ayuda.csv  data_naranjax.csv  data_uala.csv
notebooks/: analisis.ipynb
